Fix grid layout and align button in the Header

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 
 .grid {
   margin-top: 100px;
+  margin-bottom: 70px;
   display: flex;
   flex-wrap: wrap;
   width: 95vw;
